# gpx-rust

./: .gitattributes  Cargo.toml  README.md  a.xml
.github/workflows/: doc.yml  publish.yml
blahblah/: Cargo.toml
blahblah/src/: fff.rs  main.rs
blahblah/tests/fixtures/: track_20240928_164244.gpx
doc/: book.toml
doc/src/: SUMMARY.md  training.md
doc/src/overview/: overview.md
examples/derivative/: main.rs
examples/first_order/: main.rs
examples/plot/: main.rs
examples/simple/: main.rs
examples/style_kml/: main.rs
exe/: Cargo.toml
exe/src/: course-tool.rs
lib/: Cargo.toml
lib/src/course/: tcx_course.rs  xcourse.rs
lib/src/kml/: write.rs
lib/tests/: test1.rs
lib/tests/data/: activity_19083574335.tcx  activity_19302390776.tcx
osm/: Cargo.toml
osm/src/: iomodel.rs  main.rs  model.rs
osm/src/test/: test.rs
src/: iomodel.rs  lib.rs  main.rs  model.rs  myerror.rs  test.rs
src/course/: mod.rs
src/kml/: convert.rs  mod.rs  model.rs  write.rs
src/tcx/: mod.rs  model.rs  read.rs
src/test/: test.rs
src/transform/: derivate.rs  filter.rs  kml_of_df.rs  mod.rs
tests/: test_derivative.rs  test_kml.rs  test_kml_of_df.rs  test_tcx.rs
tests/data/: activity_19083574335.csv  activity_19302390776-1.kml  activity_19302390776.csv
