[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.13"
chrono = "0.4.41"
geo = "0.28.0"
geojson = "0.24.1"
gpx = "0.10.0"
itertools = "0.14.0"
log = "0.4.27"
log4rs = "1.3.0"
polars = { version = "0.48.1", features = ["lazy", "dtype-datetime","temporal","dtype-duration","dtype-i128"] }
quote = "1.0.37"
regex = "1.11.1"
tcx = "0.9.3"
lc-gpx-utils={path="../lib"}
kml = "0.9.1"

[[bin]]
name="course-tool"
path="src/course-tool.rs"



[[bin]]
name="xxx"
path="src/main-xxx.rs"



