[package]
name = "lc-gpx-utils"
version = "0.1.2"
edition = "2024"
description="utilities for to generate kml and gpx files"
license = "MIT OR Apache-2.0"
documentation = "https://laurentcarrie.github.io/gpx-rust/"
repository="https://github.com/laurentcarrie/gpx-rust"  

[dependencies]
argh = "0.1.13"
assert_float_eq = "1.1.4"
chrono = "0.4.41"
geo = "0.28.0"
geojson = "0.24.1"
gpx = "0.10.0"
itertools = "0.14.0"
log = "0.4.27"
log4rs = "1.3.0"
polars = { version = "0.48.1", features = ["lazy", "dtype-datetime","temporal","dtype-duration","dtype-i128"] }
quick-xml = "0.37.5"
quote = "1.0.37"
regex = "1.11.1"
simple-logging = "2.0.2"
tcx = "0.9.3"

